
* ``daily_working_hours`` attribute is moved from
  stalker.models.project.Project to stalker.models.studio.Studio class.

* Repository path variables now ends with a forward slash even if it is not
  given.

* Updated Project classes validation messages to correlate with Stalker
  standard.

* Implementation of the Studio class is finished. The scheduling works like a
  charm.

0.2.0.a10
---------

* jQueryGantt:
  * jQueryGantt is now using the Task ids coming from Stalker instead of the
    ridiculous rowId.
  * Fixed a lot of issues related with the new data structure, it seems
    everything is working properly right now.
  * Parent Tasks displayed differently than the leaf tasks (on paar with the
    other gantt charts).
  * Gantt chart in User Detail page is now showing the parent tasks of the
    tasks of the user.
  * Now there are two different context menus for container/parent tasks and
    leaf tasks.

* Added new attribute to WorkingHours class called ``weekly_working_hours``,
  which calculates the weekly working hours based on the working hours defined
  in the instance.

* Updated the Create Task Dialog to reflect the TaskJuggler integration.

* Task class now has a new attribute called ``schedule_timing`` which is
  replacing the ``effort``, ``length`` and ``duration`` attributes. Together
  with the ``schedule_model`` attribute it will be used in scheduling the Task.

* Updated the config system to the one used in oyProjectManager (based on
  Sphinx config system). Now to reach the defaults::
    
    # instead of doing the following
    from stalker.conf import defaults # not valid anymore
    
    # use this
    from stalker import defaults
  
  If the above idiom is used, the old ``defaults`` module behaviour is
  retained, so no code change is required other than the new lower case config
  variable names.

0.2.0.a9
--------

* A new property called ``to_tjp`` added to the SimpleEntity class which needs