@@ -22,6 +22,10 @@ Stalker Changes
 * Implementation of the Studio class is finished. The scheduling works like a
   charm.
 
+* Added dialogCreator.js which helps creating a dialog without having a widget
+  (Button or MenuItem) calling it and updated dialogCaller.js to use
+  dialogCreator while creating a dialog.
+
 0.2.0.a10
 ---------
 
